2004-02-04  Terry <tbiggs@users.sf.net>

	* added tabbed browsing option to preferences dialog
	

2004-02-03  Moses <m-mcknight@users.sf.net>

	* started work on tabbed browsing
	* added gnome2/tabbed_browser.c and gui/tabbed_browser.h


2004-01-20  Terry <tbiggs@users.sf.net>

	* added a 'Sources' item to the module manager - for adding and removing
	  remote sources. (will only add at the moment)
	  

2004-01-15  Moses <m-mcknight@users.sf.net>

	* added a setting to remember the dimensions of the search sidebar


2004-01-14  Andy <andyp@users.sf.net>

	* updated spec file to fix build for users and support the renaming of
	  the package to gnomesword. We now obsolete gnomesword2 (weird but 
	  hopefully it will hold up ok).
	  

2004-01-13  Terry <tbiggs@users.sf.net>

	* major changes to rename package to gnomesword (was gnomesword2).
	  Users of gnomesword2 CVS builds (or who have built from source) should
	  do a 'make uninstall' from their old tree before updating to avoid
	  manual work removing old gnomesword2 files.
	* fixed references to main/shortcutbar.h and removed unnecessary files.


2004-01-09  Terry <tbiggs@users.sf.net>

	* added space between items in Bible and commentary dialog navigation 
	  tool bars
	* added global option support to gbs (for Andy's Life Time module)
	* the footnotes in lifetimes look bad - in BT also 
	  (may be a filter problem)
	* added files gui/mod_global_ops.h and gnome2/mod_global_ops.c


2004-01-06  Andy <andyp@users.sf.net>

	* internationalization improvements (close RFE #861280)
	* reworked Makefile.am, added 'make rpm' rule, reorganized
	* bumped version to 2.1.dev1 (this is a dev/test cycle)
	(NB GNOME 1.x build is probably broken due to gnomesword2 
	referenced in the configure and Makefile stuff)
	

2004-01-05  Terry <tbiggs@users.sf.net>

	* added check for ".sword/InstallMgr/InstallMgr.conf" in users home 
	  directory.
	* added progress bar for refresh remote